--- a/files/usr/share/applications/ventoy.desktop
+++ b/files/usr/share/applications/ventoy.desktop
@@ -4,7 +4,7 @@ Version=1.0
 GenericName=Multiboot USB
 Name=Ventoy
 Comment=Create a multiboot USB
-Exec=deepin-terminal -e ventoy
+Exec=x-terminal-emulator -e ventoy
 Icon=ventoy
 Terminal=false
 Categories=System
