Se quitó el lanzador de la GUI de ventoy porque dan problemas y no se inicia

--- a/files/usr/share/applications/ventoy.desktop
+++ b/files/usr/share/applications/ventoy.desktop
@@ -4,9 +4,9 @@ Version=1.0
 GenericName=Multiboot USB
 Name=Ventoy
 Comment=Create a multiboot USB
-Exec=x-terminal-emulator -e ventoy
+Exec=ventoy
 Icon=ventoy
-Terminal=false
+Terminal=true
 Categories=System
 StartupNotify=false
 X-GNOME-Autostart-Delay=60
