--- a/ventoy-wizard.desktop
+++ b/ventoy-wizard.desktop
@@ -6,7 +6,7 @@ Name=Ventoy wizard
 Comment=Create a multiboot USB
 Exec=x-terminal-emulator -e ventoy-wizard
 Icon=ventoy-wizard
-Terminal=false
+Terminal=true
 Categories=System
 StartupNotify=false
 X-GNOME-Autostart-Delay=60
