Actualización a 1.0.52 Agregando lanzador para la GUI nativa de Ventoy para GNU/Linux Agregando lanzador para el wizard Traducí el wizard al español

--- a/files/usr/share/applications/ventoy.desktop
+++ b/files/usr/share/applications/ventoy.desktop
@@ -4,7 +4,7 @@ Version=1.0
 GenericName=Multiboot USB
 Name=Ventoy
 Comment=Create a multiboot USB
-Exec=ventoy
+Exec=sudo /opt/apps/ventoy/VentoyGUI.x86_64
 Icon=ventoy
 Terminal=true
 Categories=System
